<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_checkbox_title" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_title" />

    <!-- Radio -->
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/r_chendu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_chengdu" />

        <RadioButton
            android:id="@+id/r_chongqin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/r_chongqin" />

        <RadioButton
            android:id="@+id/r_beijin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_beijing" />

        <RadioButton
            android:id="@+id/r_tianjin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_tianjin" />
    </RadioGroup>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:text="@string/checkbox_title" />

    <!-- Checkbox -->
    <CheckBox
        android:id="@+id/c_backetball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_backetball" />

    <CheckBox
        android:id="@+id/c_pingpoball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_pingpoball" />

    <CheckBox
        android:id="@+id/c_bycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_bycle" />

</LinearLayout>